--- a/views/new.slim
+++ b/views/new.slim
@@ -1,2 +1,5 @@
 .content
-  form id="newSlide" method="post" action="/slides"
+  form#newSlide method="post" action="/slides"
+    input#username type="text" name="username" placeholder="username..."
+    input#slidename type="text" name="slidename" placeholder="slidename..."
+    input type="submit" name="Send"
