#11 spec green /new has file-input

--- a/views/new.slim
+++ b/views/new.slim
@@ -1,4 +1,5 @@
 form#newSlide method="post" action="/slides"
-  input#username type="text" name="username" placeholder="username..."
+  input#username  type="text" name="username" placeholder="username..."
   input#slidename type="text" name="slidename" placeholder="slidename..."
+  input#slide     type="file" name="slide" placeholder="select PDF..."
   input type="submit" name="Send"
