#11 spec red PDF upload

--- a/views/new.slim
+++ b/views/new.slim
@@ -1,4 +1,4 @@
-form#newSlide method="post" action="/slides"
+form#newSlide method="post" action="/slides" enctype="multipart/form-data"
   input#username  type="text" name="username" placeholder="username..."
   input#slidename type="text" name="slidename" placeholder="slidename..."
   input#slide     type="file" name="slide" placeholder="select PDF..."
