--- a/views/slide.slim
+++ b/views/slide.slim
@@ -1,1 +1,11 @@
+style
+  |
+    #slideView {
+      width: 640px;
+      height: 400px;
+      border: 1px solid black;
+    }
 #slideView
+  - @page_number.times do |n|
+    section id="page#{n}"
+      img href="#{@img_urls}"
