--- a/views/slide.slim
+++ b/views/slide.slim
@@ -8,4 +8,4 @@ style
 #slideView
   - @page_number.times do |n|
     section id="page#{n}"
-      img href="#{@img_urls}"
+      img href="#{@page_urls[n]}"
