--- a/views/layout.slim
+++ b/views/layout.slim
@@ -22,6 +22,7 @@ html
         a#toTop {
           text-decoration: none;
         }
+    link rel="stylesheet" href="/css/emaki.css"
   body
     .content
       .header
