--- a/views/slide.slim
+++ b/views/slide.slim
@@ -1,11 +1,7 @@
-style
-  |
-    #slideView {
-      width: 640px;
-      height: 400px;
-      border: 1px solid black;
-    }
+script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+script src="/js/slide.js"
 #slideView
-  - @page_number.times do |n|
-    section id="page#{n}"
-      img src="#{@page_urls[n]}"
+  input#pageNumber type="hidden" value="#{@page_number}"
+  - @page_urls.each_with_index do |url, i|
+    section id="page#{i}"
+      img src="#{url}" alt="page #{i}"
