#11 spec green Slide page has [next] and [prev]

--- a/views/slide.slim
+++ b/views/slide.slim
@@ -5,3 +5,8 @@ script src="/js/slide.js"
   - @page_urls.each_with_index do |url, i|
     section id="page#{i}"
       img src="#{url}" alt="page #{i}"
+#slideControls
+  button#prev
+    | <
+  button#next
+    | >
