--- a/views/new.slim
+++ b/views/new.slim
@@ -1,5 +1,11 @@
 form#newSlide method="post" action="/slides" enctype="multipart/form-data"
-  input#username  type="text" name="username" placeholder="username..."
-  input#slidename type="text" name="slidename" placeholder="slidename..."
-  input#slide     type="file" name="slide" placeholder="select PDF..."
-  input type="submit" name="Send"
+  fieldset
+    legend Register new slide
+    input#username  type="text" name="username" placeholder="username..."
+    input#slidename type="text" name="slidename" placeholder="slidename..."
+    input#slide     type="file" name="slide" placeholder="select PDF..."
+    input type="submit" name="Send"
+  - if @attention
+    #attention
+      == @attention
+
