--- a/views/index.slim
+++ b/views/index.slim
@@ -1,8 +1,10 @@
-p Emaki is still dozing
-p
-  | our project is&nbsp;
-  a href="https://github.com/born-in-makuhari/emaki"
-    | here
+#dozing
+  p Emaki is still dozing
+  p
+    | our project is&nbsp;
+    a href="https://github.com/born-in-makuhari/emaki"
+      | here
+h3.all All slides
 #slides
   - @slides.each do |un, user_slides|
     h3 = un
