--- a/views/layout.slim
+++ b/views/layout.slim
@@ -10,6 +10,5 @@ html
         a#toTop href="/"
           h1 emaki
         a#toNew href="/new"
-          |
-            + New slide
+          h3 + new slide
       == yield
