--- a/views/new.slim
+++ b/views/new.slim
@@ -1,10 +1,14 @@
 form#newSlide method="post" action="/slides" enctype="multipart/form-data"
   fieldset
-    legend Register new slide
-    input#username  type="text" name="username" placeholder="username..."
-    input#slidename type="text" name="slidename" placeholder="slidename..."
-    input#slide     type="file" name="slide" placeholder="select PDF..."
-    input type="submit" name="Send"
+    h3 Register new slide
+    p
+      input#username  type="text" name="username" placeholder="username..."
+      | &nbsp;/&nbsp;
+      input#slidename type="text" name="slidename" placeholder="slidename..."
+    p
+      input#slide     type="file" name="slide" placeholder="select PDF..."
+    p
+      input type="submit" name="Send"
   - if @attention
     #attention
       == @attention
