--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,7 +3,7 @@ html
   head
     meta charset="utf-8"
     title emaki
-    link rel="stylesheet" href="/css/emaki.css"
+    link rel="stylesheet" href="/css/styles.css"
   body
     .content
       .header
@@ -12,3 +12,8 @@ html
         a#toNew href="/new"
           h3 + new slide
       == yield
+    / jquery & bootstrap
+    script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+    script src="/js/bootstrap.min.js"
+    / original scripts
+    script src="/js/slide.js"
