--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,9 +16,9 @@ html
         nav
           ul.nav.nav-pills.pull-right
             li role="presentation"
-              a href="/"  emaki
+              a#toTop href="/" emaki
             li.active role="presentation"
-              a href="/new"  + New slide
+              a#toNew href="/new"  + New slide
         h3.text-muted emaki
       == yield
       footer.footer
