--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,3 +6,17 @@
 
 // Import Bootstrap for Sass
 @import "bootstrap";
+
+.header nav {
+  padding: 10px 0 0 0;
+}
+
+h3.text-muted {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: $screen-xs-max) {
+  .jumbotron {
+    padding: 1em;
+  }
+}
