--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,7 +16,7 @@ html
         nav
           ul.nav.nav-pills.pull-right
             li role="presentation"
-              a#toTop href="/" emaki
+              a#toTop href="/" Top
             li.active role="presentation"
               a#toNew href="/new"  + New slide
         h3.text-muted emaki
