--- a/views/layout.slim
+++ b/views/layout.slim
@@ -17,7 +17,7 @@ html
           ul.nav.nav-pills.pull-right
             li role="presentation"
               a#toTop href="/" Top
-            li.active role="presentation"
+            li role="presentation"
               a#toNew href="/new"  + New slide
         h3.text-muted emaki
       == yield
