--- a/sass/_bootstrap-variables.scss
+++ b/sass/_bootstrap-variables.scss
@@ -106,6 +106,9 @@
 // $border-radius-base:        4px
 // $border-radius-large:       6px
 // $border-radius-small:       3px
+$border-radius-base:        3px;
+$border-radius-large:       4px;
+$border-radius-small:       2px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 // $component-active-color:    #fff
