--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,6 +9,9 @@
 // Import Bootstrap for Sass
 @import "bootstrap";
 
+// ----------------------------------------------------------
+// common
+//
 
 // ----------------------------------------------------------
 // layout.slim
@@ -76,4 +79,23 @@ h3.text-muted {
       }
     }
   }
+}
+
+// ----------------------------------------------------------
+// new.slim
+//
+.file {
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+}
+
+.file input[type="file"] {
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0;
+  cursor: pointer;
 }
