--- a/views/new.slim
+++ b/views/new.slim
@@ -1,13 +1,14 @@
 .row
   .col-lg-6.col-lg-offset-3.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1.col-xs-12
     h1.text-muted 新しいスライド
+    p.text-muted * アルファベット、「-」「_」が使えます
     form#newSlide method="post" action="/slides" enctype="multipart/form-data"
       .form-group
         .row
           .col-xs-6
-            input#username.form-control.input-lg type="text" name="username" placeholder="ユーザー名"
+            input#username.form-control.input-lg type="text" name="username" placeholder="ユーザー名 *"
           .col-xs-6
-            input#slidename.form-control.input-lg type="text" name="slidename" placeholder="スライド名"
+            input#slidename.form-control.input-lg type="text" name="slidename" placeholder="スライド名 *"
       .form-group
         .input-group
           input#selectedFile.form-control (type="text" readonly)
