--- a/views/new.slim
+++ b/views/new.slim
@@ -11,12 +11,12 @@
             input#slidename.form-control.input-lg type="text" name="slidename" placeholder="スライド名 *"
       .form-group
         .input-group
-          input#selectedFile.form-control (type="text" readonly)
           .input-group-btn
-            button#selectFile.btn.btn-default type="button" ファイルを選択
+            button#selectFile.btn.btn-info.btn-lg type="button" PDFファイルを選択
             input#slide.hidden type="file" name="slide"
+          input#selectedFile.form-control.input-lg (type="text" readonly)
       .form-group
-        input.btn.btn-primary.btn-block.input-lg type="submit"
+        input.btn.btn-primary.btn-block.btn-lg type="submit"
       - if @attention
         #attention
           == @attention
