#28 link to top

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -20,7 +20,8 @@ html
               a#toTop href="/" Top
             li role="presentation"
               a#toNew href="/new"  + New slide
-        h3.text-muted emaki
+        h3.text-muted
+          a href="/" emaki
       == yield
       footer.footer
         p
