--- a/views/new.slim
+++ b/views/new.slim
@@ -6,9 +6,15 @@
       .form-group
         .row
           .col-xs-6
-            input#username.form-control.input-lg type="text" name="username" placeholder="ユーザー名 *"
+            input#username.form-control.input-lg type="text" name="username" placeholder="ユーザーID *"
           .col-xs-6
-            input#slidename.form-control.input-lg type="text" name="slidename" placeholder="スライド名 *"
+            input#slidename.form-control.input-lg type="text" name="slidename" placeholder="スライドID *"
+      .form-group
+        .row
+          .col-xs-6
+            input#name.form-control.input-lg type="text" name="name" placeholder="ユーザー名"
+          .col-xs-6
+            input#title.form-control.input-lg type="text" name="title" placeholder="スライド名"
       .form-group
         .input-group
           .input-group-btn
