#38 spec yellow プログレスバーの値を変更する

--- a/views/slide.slim
+++ b/views/slide.slim
@@ -6,6 +6,7 @@
         section id="page#{i}"
           img src="#{url}" alt="page #{i}"
     #slideControls.panel
+      progress#pageIndicator max="#{@page_number - 1}" value="0"
       #indicator
         - @page_number.times do |i|
           span.indicator-dot id="indicatorDot#{i}"
