#17 yellow ユーザー登録画面の表示

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -18,8 +18,15 @@ html
           ul.nav.nav-pills.pull-right
             li role="presentation"
               a#toTop href="/" Top
+            / TODO: ログイン状態の時しか表示しない
             li role="presentation"
               a#toNew href="/new"  + New slide
+            / TODO: ログアウト状態の時しか表示しない
+            li role="presentation"
+              a#toRegister href="/register"
+                span.glyphicon.glyphicon-user
+                | &nbsp;
+                Register
         h3.text-muted
           a href="/" emaki
       == yield
