#17 green ログイン画面へのリンク

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -23,6 +23,12 @@ html
               a#toNew href="/new"  + New slide
             / TODO: ログアウト状態の時しか表示しない
             li role="presentation"
+              a#toSignIn href="/signin"
+                span.glyphicon.glyphicon-user
+                | &nbsp;
+                | Sign in
+            / TODO: ログアウト状態の時しか表示しない
+            li role="presentation"
               a#toRegister href="/register"
                 | +
                 | &nbsp;
