--- a/views/signin.slim
+++ b/views/signin.slim
@@ -1,16 +1,10 @@
 .row
   .col-lg-6.col-lg-offset-3.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1.col-xs-12
     h1.text-muted ログイン
-    form#register method="post" action="/users"
+    form#signin method="post" action="/signin"
       .form-group
-        input#email.form-control.input-lg type="text" name="email" placeholder="メールアドレス"
+        input#usernameOrEmail.form-control.input-lg type="text" name="username_or_email" placeholder="ユーザーID または メールアドレス"
       .form-group
         input#password.form-control.input-lg type="password" name="password" placeholder="パスワード"
-      hr
-      .form-group
-        input#username.form-control.input-lg type="text" name="username" placeholder="ユーザーID *"
-        p.text-muted * アルファベット、「-」「_」が使えます
-      .form-group
-        input#name.form-control.input-lg type="text" name="name" placeholder="ユーザー名（オプション）"
       .form-group
         input.btn.btn-primary.btn-block.btn-lg type="submit"
