#17 見た目統一

--- a/views/slide_not_found.slim
+++ b/views/slide_not_found.slim
@@ -1,2 +1,3 @@
-h3#slideNotFound
-  | "#{@slide_name}" Not Found.
+#slideNotFound.panel.panel-warning
+  .panel-heading
+    | "#{@slide_name}" Not Found.
