--- a/views/slug_rule.slim
+++ b/views/slug_rule.slim
@@ -1,7 +1,8 @@
-#slugRule
-  h3
+#slugRule.panel.panel-warning
+  .panel-heading
     | Please follow these rules.
-  ul
-    li 1 ~ 50 characters
-    li Allowed: a~z, A~Z, 0~9, -, _
-    li Use alphabet at the first and last
+  .panel-body
+    ul
+      li 1 ~ 50 characters
+      li Allowed: a~z, A~Z, 0~9, -, _
+      li Use alphabet at the first and last
