--- a/views/layout.slim
+++ b/views/layout.slim
@@ -57,3 +57,4 @@ html
     script src="/js/bootstrap.min.js"
     / original scripts
     script src="/js/slide.js"
+    script src="/js/register.js"
