--- a/views/slug_rule.slim
+++ b/views/slug_rule.slim
@@ -1,8 +1,8 @@
 #slugRule.panel.panel-warning
   .panel-heading
-    | Please follow these rules.
+    | IDは以下の形式にしてください。
   .panel-body
     ul
-      li 1 ~ 50 characters
-      li Allowed: a~z, A~Z, 0~9, -, _
-      li Use alphabet at the first and last
+      li 1~50文字
+      li 使える文字: a~z, A~Z, 0~9, -, _
+      li 最初と最後はアルファベット
