--- a/views/register.slim
+++ b/views/register.slim
@@ -14,6 +14,7 @@
         input#name.form-control.input-lg type="text" name="name" placeholder="ユーザー名（オプション）" value="#{@last_input['name']}"
       .form-group
         input.btn.btn-primary.btn-block.btn-lg type="submit"
+        input type="hidden" name="authenticity_token" value="#{session[:csrf]}"
       - if @attention
         #attention
           == @attention
