--- a/views/signin.slim
+++ b/views/signin.slim
@@ -3,9 +3,9 @@
     h1.text-muted ログイン
     form#signin method="post" action="/signin"
       .form-group
-        input#usernameOrEmail.form-control.input-lg type="text" name="username_or_email" placeholder="ユーザーID または メールアドレス"
+        input#usernameOrEmail.form-control.input-lg type="text" name="username_or_email" placeholder="ユーザーID または メールアドレス" value="#{@last_input['username_or_email']}"
       .form-group
-        input#password.form-control.input-lg type="password" name="password" placeholder="パスワード"
+        input#password.form-control.input-lg type="password" name="password" placeholder="パスワード" value="#{@last_input['password']}"
       .form-group
         input.btn.btn-primary.btn-block.btn-lg type="submit"
         input type="hidden" name="authenticity_token" value="#{session[:csrf]}"
