#17 注意書きは「attention :something_wrong」でリダイレクト先にに引き継げる。

--- a/views/index.slim
+++ b/views/index.slim
@@ -7,10 +7,10 @@
       | emaki on Github
       | &nbsp;
       span.glyphicon.glyphicon-new-window
-- if @attention
+- if attention?
   .row#attention
     .col-lg-12
-      == @attention
+      == attention
 .row#slides
   .col-lg-12
     - if @slides
