--- a/views/register.slim
+++ b/views/register.slim
@@ -3,18 +3,18 @@
     h1.text-muted 新しいユーザー
     form#register method="post" action="/users"
       .form-group
-        input#email.form-control.input-lg type="text" name="email" placeholder="メールアドレス" value="#{@last_input['email']}"
+        input#email.form-control.input-lg type="text" name="email" placeholder="メールアドレス" value="#{ last :email }"
       .form-group
-        input#password.form-control.input-lg type="password" name="password" placeholder="パスワード" value="#{@last_input['password']}"
+        input#password.form-control.input-lg type="password" name="password" placeholder="パスワード" value="#{ last :password }"
       hr
       .form-group
-        input#username.form-control.input-lg type="text" name="username" placeholder="ユーザーID *" value="#{@last_input['username']}"
+        input#username.form-control.input-lg type="text" name="username" placeholder="ユーザーID *" value="#{ last :username }"
         p.text-muted * アルファベット、「-」「_」が使えます
       .form-group
-        input#name.form-control.input-lg type="text" name="name" placeholder="ユーザー名（オプション）" value="#{@last_input['name']}"
+        input#name.form-control.input-lg type="text" name="name" placeholder="ユーザー名（オプション）" value="#{ last :name }"
       .form-group
         input.btn.btn-primary.btn-block.btn-lg type="submit"
         input type="hidden" name="authenticity_token" value="#{session[:csrf]}"
-      - if @attention
+      - if attention?
         #attention
-          == @attention
+          == attention
