#17 + views/attentions/user_not_found.slim (コミットし忘れファイル

--- a/views/signin.slim
+++ b/views/signin.slim
@@ -12,4 +12,4 @@
 - if attention?
   .row
     .col-lg-6.col-lg-offset-3.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1.col-xs-12
-      = attention
+      == attention
