--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,7 @@ html
     meta content="" name="author" /
     title emaki
     / load compiled css
-    link rel="stylesheet" href="/css/styles.css"
+    link rel="stylesheet" href="/css/emaki.css"
     script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
   body
     .container
