--- a/sass/emaki.scss
+++ b/sass/emaki.scss
@@ -5,6 +5,10 @@
 // common
 //
 
+.emaki-text {
+  color: #00a0e9; // logo color
+}
+
 // ----------------------------------------------------------
 // layout.slim
 //
