イメージカラーを変数にした

--- a/sass/emaki.scss
+++ b/sass/emaki.scss
@@ -5,8 +5,10 @@
 // common
 //
 
+$emaki-color: #00a0e9;
+
 .emaki-text {
-  color: #00a0e9; // logo color
+  color: $emaki-color; // logo color
 }
 
 // ----------------------------------------------------------
