--- a/views/index.slim
+++ b/views/index.slim
@@ -1,11 +1,15 @@
-.row
-  .col-xs-4.col-xs-offset-4
-    img.img-responsive.center-block src="/images/emaki-logo.png"
-.row
-  .col-lg-12.text-center
-    h1.emaki-text emaki
-    p.emaki-text
-      | スライド共有を、よりシンプルに。
+/ google fonts より、Open sansの細いやつを使う
+link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'
+.eyecatch
+  .row
+    .col-md-4.col-md-offset-4.col-xs-6.col-xs-offset-3
+      img#logo.img-responsive.center-block src="/images/emaki-logo.png"
+  .row
+    .col-lg-12.text-center
+      h1 emaki
+      p
+        | スライド共有を、もっとシンプルに。
+      hr
 .row#slides
   .col-lg-12
     - if @slides
