--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,9 +1,5 @@
 // to Override bootstrap's variables
 //
-// if You compiled with compass,
-// see sass/_bootstrap-variables.scss for informations
+// see sass/_bootstrap-variables.scss for your informations
 //
 
-$border-radius-base:        3px;
-$border-radius-large:       4px;
-$border-radius-small:       2px;
