--- a/views/layout.slim
+++ b/views/layout.slim
@@ -10,6 +10,8 @@ html
     title emaki
     / load compiled css
     link rel="stylesheet" href="/css/emaki.css"
+    / google fonts より、Open sansの細いやつを使う
+    link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'
     script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"
   body
     .container
