--- a/views/layout.slim
+++ b/views/layout.slim
@@ -24,8 +24,10 @@ html
               a#toNew href="/new"  + New slide
         h3.text-muted
           a href="/" emaki
+    .container
       == yield
-      footer.footer
+    .footer
+      .container
         p
           | &copy; Born in Makuhari
           | &nbsp;
